fix(theme): remove category title bubble background & improve spacing on mobile

--- a/scss/common/fkb-c-category.scss
+++ b/scss/common/fkb-c-category.scss
@@ -181,6 +181,7 @@ body[class*="category-"] {
   .navigation-categories .category-list tbody tr td.category {
     min-block-size: 0 !important;
     padding-block: var(--tds-space-s) !important;
+    padding-inline-start: var(--tds-space-m) !important;
   }
   
   .navigation-categories .category-list tbody tr {
